--- a/download.html
+++ b/download.html
@@ -57,10 +57,9 @@
 
           <a class="button button-primary" target="_blank" href="files/Offered Activities.pdf">Offered Activities</a>
            <a class="button button-primary" target="_blank" href="https://aryabhat.org/qintro">Quiz Introduction Video</a>
-          <hr>
+
           <a class="button button-primary" target="_blank" href="files/2023/Circular_AstroQuiz_2023-24.pdf">Circular Astro Quiz 2023-24</a> 
-          <a class="button button-primary" target="_blank" href="files/2023/Circular_AstroQuiz_2023-24 Extension.pdf">Extension of Circular</a>             
-          <hr>     
+          <a class="button button-primary" target="_blank" href="files/2023/Circular_AstroQuiz_2023-24 Extension.pdf">Extension of Circular</a>      
         </td>
       </tr>
       <tr>
@@ -84,6 +83,9 @@
           Institutional Registration
         </td>
         <td>
+          <p>Registration is Closed.</p>
+          <!--
+            
           <hr>
           ( Section for Schools Only, for individual registration go  
           <a target="_blank" href="https://quiz.aryabhat.org">here</a> ) 
@@ -95,6 +97,7 @@
           <a class="button button-primary" target="_blank" href="files/2023/Institutional_Format.xls">Format for Institutional Entries </a>
           <br>
           <hr>
+        -->
         </td>
       </tr>
       <tr>
