--- a/index.html
+++ b/index.html
@@ -47,12 +47,10 @@
    <div class="main row">
     <div class="four columns" style="display: flex; flex-direction: column; align-items: center;">
       <h4>Notices</h4>
-
-
-  <p align="center">
-<b><a href="https://quiz.aryabhat.org">Click here to login to Online Astronomy Quiz </a> </b>
-</p>
 <br>
+<p>AstroQuiz 2023-24 is on going</p>
+<br><br><br><br>
+<p>Registration is Closed</p>
      
     </div>
 		<div class="eight columns" style="display: flex; flex-direction: column; align-items: center;">
@@ -82,4 +80,9 @@
 
   </div>
 </body>
+<script type="text/javascript">
+    window.onbeforeunload = function() {
+        return "Dude, are you sure you want to leave? Think of the kittens!";
+    }
+</script>
 </html>
