--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
     <div class="four columns" style="display: flex; flex-direction: column; align-items: center;">
       <h4>Notices</h4>
 <br>
-<p>AstroQuiz 2023-24 is on going</p>
+<p>AstroQuiz 2023-24 </p>
 <br><br><br><br>
-<p>Registration is Closed</p>
+<p> <a href="https://www.youtube.com/watch?v=-7nE-8WVKY8">Preliminary Result Declaration on 10 Sept 2023 6 PM</a></p>
      
     </div>
 		<div class="eight columns" style="display: flex; flex-direction: column; align-items: center;">
