--- a/index.html
+++ b/index.html
@@ -48,9 +48,10 @@
     <div class="four columns" style="display: flex; flex-direction: column; align-items: center;">
       <h4>Notices</h4>
 <br>
-<p>AstroQuiz 2023-24 </p>
-<br><br><br><br>
-<p> <a href="https://www.youtube.com/watch?v=-7nE-8WVKY8">Preliminary Result Declaration on 10 Sept 2023 6:30 PM</a></p>
+<h4>AstroQuiz 2023-24 </h4>
+<h4>Preiminary Result Declared. Congratulations to all the winners!!</h4>
+<p> <a class="button button-primary" target="_" href="files/2023/Merit202324.pdf">Merit List</a></p>
+<p> <a class="button button-primary" target="_" href="files/2023/Summ202324.pdf">Participation Summary</a></p>
      
     </div>
 		<div class="eight columns" style="display: flex; flex-direction: column; align-items: center;">
