--- a/index.html
+++ b/index.html
@@ -49,9 +49,8 @@
       <h4>Notices</h4>
 <br>
 <h4>AstroQuiz 2023-24 </h4>
-<h4>Preiminary Result Declared. Congratulations to all the winners!!</h4>
-<p> <a class="button button-primary" target="_" href="files/2023/Merit202324.pdf">Merit List</a></p>
-<p> <a class="button button-primary" target="_" href="files/2023/Summ202324.pdf">Participation Summary</a></p>
+<p>Secondary Level Exam Concluded. Congratulations to all the winners!!</p>
+<p> <a class="button button-primary" target="_" href="files/2023/Final_MeritList_202324.pdf">Final Merit List</a></p>
      
     </div>
 		<div class="eight columns" style="display: flex; flex-direction: column; align-items: center;">
