--- a/contact.html
+++ b/contact.html
@@ -52,12 +52,15 @@
 		       258, Trilanga, Shahpura
 		        Bhopal 462039
 					</p>
+          <div style="text-decoration:none; overflow:hidden;max-width:100%;width:250px;height:250px;"><div id="google-maps-canvas" style="height:100%; width:100%;max-width:100%;"><iframe style="height:100%;width:100%;border:0;" frameborder="0" src="https://www.google.com/maps/embed/v1/place?q=Aryabhat+Foundation,+Fortune+Pride,+Trilanga,+Bhopal,+Madhya+Pradesh,+India&key=AIzaSyBFw0Qbyq9zTFTd-tUY6dZWTgaQzuU17R8"></iframe></div><style>#google-maps-canvas img{max-height:none;max-width:none!important;background:none!important;}</style></div>
         <h4>Email</h4>
         <p>info@aryabhat.org<br/>
         aryabhat.foundation@gmail.com<br/>
 				</p>
         <h4>Phone</h4>
-        <p>+91-9425674075 </p>
+        <p><a class="button button-primary"  href="tel:+919425674075">📞 +91 9425674075</a></p>
+
+        <p><a class="button button-primary" href="https://wa.me/9425674075">💬 Whatsapp 9425674075</a></p>
 
 		 </div>
 
