added social media handle

--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
      
     </div>
 		<div class="eight columns" style="display: flex; flex-direction: column; align-items: center;">
+    
 		 <h4 align="center">About Aryabhat Foundation</h4>
 			<p>
 				Aryabhat foundation is a special endeavor for promotion of Basic Science. The movement started in 1995, which has now taken a shape of a duly registered social service organisation. Supported by a group of people dedicated to their duties towards the society, the organisation is committed to serving Basic Science in a tasty way to the youngsters. This will inculcate a science-based temperament in them.
@@ -70,8 +71,13 @@
 			<p>
 				We look for cooperation from the students, teachers, school authorities and parents for bringing our small effort to a great success.
 			</p>
-		 </div>
 
+      <p><a href="https://instagram.com/aryabhatorg"> instagram</a> &nbsp;&nbsp;&nbsp;
+       <a href="https://youtube.com/aryabhatorg"> youtube</a> &nbsp;&nbsp;&nbsp;
+       <a href="https://www.facebook.com/aryabhatorg"> facebook</a> &nbsp;&nbsp;&nbsp;
+       <a href="https://x.com/aryabhatorg"> X / twitter</a> 
+     </p>
+		 </div>
     </div>
     <div class="row" >
   		<p> &copy; Aryabhat Foundation &middot;</p>
