--- a/contact.html
+++ b/contact.html
@@ -52,7 +52,7 @@
 		       258, Trilanga, Shahpura
 		        Bhopal 462039
 					</p>
-          <div style="text-decoration:none; overflow:hidden;max-width:100%;width:250px;height:250px;"><div id="google-maps-canvas" style="height:100%; width:100%;max-width:100%;"><iframe style="height:100%;width:100%;border:0;" frameborder="0" src="https://www.google.com/maps/embed/v1/place?q=Aryabhat+Foundation,+Fortune+Pride,+Trilanga,+Bhopal,+Madhya+Pradesh,+India&key=AIzaSyBFw0Qbyq9zTFTd-tUY6dZWTgaQzuU17R8"></iframe></div><style>#google-maps-canvas img{max-height:none;max-width:none!important;background:none!important;}</style></div>
+          <div style="text-decoration:none; overflow:hidden;max-width:100%;"><div id="google-maps-canvas" style="height:100%; width:100%;max-width:100%;"><iframe style="height:100%;width:100%;border:0;" frameborder="0" src="https://www.google.com/maps/embed/v1/place?q=Aryabhat+Foundation,+Fortune+Pride,+Trilanga,+Bhopal,+Madhya+Pradesh,+India&key=AIzaSyBFw0Qbyq9zTFTd-tUY6dZWTgaQzuU17R8"></iframe></div><style>#google-maps-canvas img{max-height:none;max-width:none!important;background:none!important;}</style></div>
         <h4>Email</h4>
         <p><a href="mailto:info@aryabhat.org">info@aryabhat.org</a><br/>       </p>
         <p><a href="mailto:aryabhat.foundation@gmail.com">aryabhat.foundation@gmail.com</a><br/>
@@ -63,7 +63,11 @@
         <p><a class="button button-primary" href="https://wa.me/9425674075">💬 Whatsapp 9425674075</a></p>
 
 		 </div>
-
+      <p><a href="https://instagram.com/aryabhatorg"> instagram</a> &nbsp;&nbsp;&nbsp;
+       <a href="https://youtube.com/aryabhatorg"> youtube</a> &nbsp;&nbsp;&nbsp;
+       <a href="https://www.facebook.com/aryabhatorg"> facebook</a> &nbsp;&nbsp;&nbsp;
+       <a href="https://x.com/aryabhatorg"> X / twitter</a> 
+     </p>
     </div>
     <div class="row" >
   		<p> &copy; Aryabhat Foundation &middot;</p>
