circular added for 2024-25

--- a/download.html
+++ b/download.html
@@ -58,8 +58,7 @@
           <a class="button button-primary" target="_blank" href="files/Offered Activities.pdf">Offered Activities</a>
            <a class="button button-primary" target="_blank" href="https://aryabhat.org/qintro">Quiz Introduction Video</a>
 
-          <a class="button button-primary" target="_blank" href="files/2023/Circular_AstroQuiz_2023-24.pdf">Circular Astro Quiz 2023-24</a> 
-          <a class="button button-primary" target="_blank" href="files/2023/Circular_AstroQuiz_2023-24 Extension.pdf">Extension of Circular</a>      
+          <a class="button button-primary" target="_blank" href="files/2024/Circular_AstroQuiz_2024-25.pdf">Circular Astro Quiz 2024-25</a> 
         </td>
       </tr>
       <tr>
@@ -75,7 +74,7 @@
           <a class="button button-primary" target="_blank" href="https://docs.google.com/viewerng/viewer?url=http://aryabhat.org/files/Study3.pdf">Study Material 3</a>
    
           <a class="button button-primary" target="_blank" href="https://docs.google.com/viewerng/viewer?url=http://aryabhat.org/files/Glossary.pdf">Glossary</a>
-
+            <br>Will be updated on 1 Jul 2024
         </td>
       </tr>
       <tr>
@@ -83,7 +82,7 @@
           Institutional Registration
         </td>
         <td>
-          <p>Registration is Closed.</p>
+          <p>Registration will start from 1 April 2024.</p>
           <!--
             
           <hr>
@@ -100,6 +99,14 @@
         -->
         </td>
       </tr>
+       <tr>
+        <td>
+          Individual Registration
+        </td>
+        <td>
+          <p>Registration will start from 20 June 2024.</p>
+        </td>
+      </tr>
       <tr>
         <td>
           Circulars
@@ -107,7 +114,7 @@
         <td>
           <a class="button button-primary" target="_blank" href="files/2023/Circular_JNV.pdf">JNV Circular</a>
           <a class="button button-primary" target="_blank" href="files/2023/DPI_Circular.pdf">DPI Circular</a>
-          <!--a class="button button-primary" target="_blank" href="files/2023/KV_Circular.pdf">KV Circular</a-->
+<br>Will be updated Soon<br><br>
         </td>
       </tr>
       <tr>
