--- a/index.html
+++ b/index.html
@@ -46,11 +46,37 @@
 
    <div class="main row">
     <div class="four columns" style="display: flex; flex-direction: column; align-items: center;">
-      <h4>Notices</h4>
+      <h3>Notices</h3>
 <br>
-<h4>AstroQuiz 2023-24 </h4>
-<p>Secondary Level Exam Concluded. Congratulations to all the winners!!</p>
-<p> <a class="button button-primary" target="_" href="files/2023/Final_MeritList_202324.pdf">Final Merit List</a></p>
+<h4>Aryabhat Astronomy Quiz 2024-25 </h4>
+<p>Circular released on 28 February 2024</p>
+
+<h4>Aryabhat Astronomy Quiz 2023-24 </h4>
+<p>Proposed dates for Observatory Trips</p>
+<table style="border:1px solid white;">
+  <tr>
+    <td>Dongla</td>
+    <td>8 Apr to 11 Apr 2024</td>
+  </tr>
+  <tr>
+    <td>Kavalur</td>
+    <td>27 Apr to 5 May 2024</td>
+  </tr>
+  <tr>
+    <td>Kodaikanal</td>
+    <td>27 Apr to 5 May 2024</td>
+  </tr>
+  <tr>
+    <td>Nainital</td>
+    <td>11 May to 17 May 2024</td>
+  </tr>
+  <tr>
+    <td>Udaipur</td>
+    <td>18 May to 24 May 2024</td>
+  </tr>
+
+</table>
+<!--p> <a class="button button-primary" target="_" href="files/2023/Final_MeritList_202324.pdf">Final Merit List</a></p-->
      
     </div>
 		<div class="eight columns" style="display: flex; flex-direction: column; align-items: center;">
