--- a/download.html
+++ b/download.html
@@ -82,21 +82,18 @@
           Institutional Registration
         </td>
         <td>
-          <p>Registration will start from 1 April 2024.</p>
-          <!--
             
           <hr>
-          ( Section for Schools Only, for individual registration go  
-          <a target="_blank" href="https://quiz.aryabhat.org">here</a> ) 
+          ( Section for Schools Only)<!--, for individual registration go  
+          <a target="_blank" href="https://quiz.aryabhat.org">here</a> ) -->
           <br>
           <br>
 
-          <a class="button button-primary" target="_blank" href="files/2023/Fwd_Letter.pdf">Letter for Forwarding Institution Details </a>
+          <a class="button button-primary" target="_blank" href="files/2024/Forwarding_Letter_from_Schools.pdf">Letter for Forwarding Institution Details </a>
           <br>
-          <a class="button button-primary" target="_blank" href="files/2023/Institutional_Format.xls">Format for Institutional Entries </a>
+          <a class="button button-primary" target="_blank" href="files/2024/Institutional_Format.xls">Format for Institutional Entries </a>
           <br>
           <hr>
-        -->
         </td>
       </tr>
        <tr>
