added circular , dongla date fix

--- a/download.html
+++ b/download.html
@@ -109,9 +109,9 @@
           Circulars
         </td>
         <td>
-          <a class="button button-primary" target="_blank" href="files/2023/Circular_JNV.pdf">JNV Circular</a>
-          <a class="button button-primary" target="_blank" href="files/2023/DPI_Circular.pdf">DPI Circular</a>
-<br>Will be updated Soon<br><br>
+          <a class="button button-primary" target="_blank" href="files/2024/NVS_5354_15Mar2024.pdf">JNV Circular</a>
+          <a class="button button-primary" target="_blank" href="files/2023/DPI_Circular.pdf">DPI Circular (old)</a>
+
         </td>
       </tr>
       <tr>
