--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 <table style="border:1px solid white;">
   <tr>
     <td>Dongla</td>
-    <td>8 Apr to 11 Apr 2024</td>
+    <td style="color:#ffcc33">Revised dates to be declared</td>
   </tr>
   <tr>
     <td>Kavalur</td>
