index updated. getting ready for 24-25 quiz

--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@
       <h3>Notices</h3>
 <br>
 <h4>Aryabhat Astronomy Quiz 2024-25 </h4>
-<p>Circular released on 28 February 2024</p>
+<p>Link for Individual Registration will be activated soon</p>
 
-<h4>Aryabhat Astronomy Quiz 2023-24 </h4>
+<!--h4>Aryabhat Astronomy Quiz 2023-24 </!h4>
 <p>Proposed dates for Observatory Trips</p>
 <table style="border:1px solid white;">
   <tr>
@@ -75,12 +75,12 @@
     <td>18 May to 24 May 2024</td>
   </tr>
 
-</table>
+</table-->
 <!--p> <a class="button button-primary" target="_" href="files/2023/Final_MeritList_202324.pdf">Final Merit List</a></p-->
-     
+
     </div>
 		<div class="eight columns" style="display: flex; flex-direction: column; align-items: center;">
-    
+
 		 <h4 align="center">About Aryabhat Foundation</h4>
 			<p>
 				Aryabhat foundation is a special endeavor for promotion of Basic Science. The movement started in 1995, which has now taken a shape of a duly registered social service organisation. Supported by a group of people dedicated to their duties towards the society, the organisation is committed to serving Basic Science in a tasty way to the youngsters. This will inculcate a science-based temperament in them.
@@ -101,7 +101,7 @@
       <p><a href="https://instagram.com/aryabhatorg"> instagram</a> &nbsp;&nbsp;&nbsp;
        <a href="https://youtube.com/aryabhatorg"> youtube</a> &nbsp;&nbsp;&nbsp;
        <a href="https://www.facebook.com/aryabhatorg"> facebook</a> &nbsp;&nbsp;&nbsp;
-       <a href="https://x.com/aryabhatorg"> X / twitter</a> 
+       <a href="https://x.com/aryabhatorg"> X / twitter</a>
      </p>
 		 </div>
     </div>
