updated study material. added quiz link on front page. added circular and flowchart

--- a/download.html
+++ b/download.html
@@ -58,7 +58,8 @@
           <a class="button button-primary" target="_blank" href="files/Offered Activities.pdf">Offered Activities</a>
            <a class="button button-primary" target="_blank" href="https://aryabhat.org/qintro">Quiz Introduction Video</a>
 
-          <a class="button button-primary" target="_blank" href="files/2024/Circular_AstroQuiz_2024-25.pdf">Circular Astro Quiz 2024-25</a> 
+           <a class="button button-primary" target="_blank" href="files/2024/Circular_AstroQuiz_2024-25.pdf">Circular Astro Quiz 2024-25</a>
+           <a class="button button-primary" target="_blank" href="files/2024/FlowChart.pdf">Flow Chart</a>
         </td>
       </tr>
       <tr>
@@ -67,14 +68,14 @@
         </td>
         <td>
           <br>
-          <a class="button button-primary" target="_blank" href="https://docs.google.com/viewerng/viewer?url=http://aryabhat.org/files/Study1.pdf">Study Material 1</a>
+          <a class="button button-primary" target="_blank" href="https://docs.google.com/viewerng/viewer?url=http://aryabhat.org/files/Study_Material_1.pdf">Study Material 1</a>
 
-          <a class="button button-primary" target="_blank" href="https://docs.google.com/viewerng/viewer?url=http://aryabhat.org/files/Study2.pdf">Study Material 2</a>
+          <a class="button button-primary" target="_blank" href="https://docs.google.com/viewerng/viewer?url=http://aryabhat.org/files/Study_Material_2.pdf">Study Material 2</a>
 
-          <a class="button button-primary" target="_blank" href="https://docs.google.com/viewerng/viewer?url=http://aryabhat.org/files/Study3.pdf">Study Material 3</a>
-   
+          <a class="button button-primary" target="_blank" href="https://docs.google.com/viewerng/viewer?url=http://aryabhat.org/files/Study_Material_3.pdf">Study Material 3</a>
+
           <a class="button button-primary" target="_blank" href="https://docs.google.com/viewerng/viewer?url=http://aryabhat.org/files/Glossary.pdf">Glossary</a>
-            <br>Will be updated on 1 Jul 2024
+            <br>Updated on 1 Jul 2024
         </td>
       </tr>
       <tr>
@@ -82,9 +83,9 @@
           Institutional Registration
         </td>
         <td>
-            
+
           <hr>
-          ( Section for Schools Only)<!--, for individual registration go  
+          ( Section for Schools Only)<!--, for individual registration go
           <a target="_blank" href="https://quiz.aryabhat.org">here</a> ) -->
           <br>
           <br>
@@ -101,7 +102,7 @@
           Individual Registration
         </td>
         <td>
-          <p>Registration will start from 20 June 2024.</p>
+          <p><a href="https://quiz.aryabhat.org">quiz.aryabhat.org</a></p>
         </td>
       </tr>
       <tr>
@@ -110,7 +111,8 @@
         </td>
         <td>
           <a class="button button-primary" target="_blank" href="files/2024/NVS_5354_15Mar2024.pdf">JNV Circular</a>
-          <a class="button button-primary" target="_blank" href="files/2023/DPI_Circular.pdf">DPI Circular (old)</a>
+          <a class="button button-primary" target="_blank" href="files/2023/DPI_Circular.pdf">DPI Circular (2023)</a>
+          <a class="button button-primary" target="_blank" href="files/2024/KVS_Circular.pdf">KV Circular</a>
 
         </td>
       </tr>
@@ -125,7 +127,7 @@
         </td>
       </tr>
 		</table>
-		
+
 		 </div>
     </div>
     <div class="row" >
