--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       <h3>Notices</h3>
 <br>
 <h4>Aryabhat Astronomy Quiz 2024-25 </h4>
-<p>Link for Individual Registration will be activated soon</p>
+<p> <a href="https://quiz.aryabhat.org/">Individual Registration for Quiz</a></p>
 
 <!--h4>Aryabhat Astronomy Quiz 2023-24 </!h4>
 <p>Proposed dates for Observatory Trips</p>
