updated dpi circular

--- a/download.html
+++ b/download.html
@@ -59,7 +59,6 @@
            <a class="button button-primary" target="_blank" href="https://aryabhat.org/qintro">Quiz Introduction Video</a>
 
            <a class="button button-primary" target="_blank" href="files/2024/Circular_AstroQuiz_2024-25.pdf">Circular Astro Quiz 2024-25</a>
-           <a class="button button-primary" target="_blank" href="files/2024/FlowChart.pdf">Flow Chart</a>
         </td>
       </tr>
       <tr>
@@ -87,7 +86,8 @@
           <hr>
           ( Section for Schools Only)<!--, for individual registration go
           <a target="_blank" href="https://quiz.aryabhat.org">here</a> ) -->
-          <br>
+          <br>          <br>
+          <a class="button button-primary" target="_blank" href="files/2024/FlowChart.pdf">Flow Chart for Institutions</a>
           <br>
 
           <a class="button button-primary" target="_blank" href="files/2024/Forwarding_Letter_to_Aryabhat.pdf">Letter for Forwarding Institution Details </a>
@@ -111,7 +111,7 @@
         </td>
         <td>
           <a class="button button-primary" target="_blank" href="files/2024/NVS_5354_15Mar2024.pdf">JNV Circular</a>
-          <a class="button button-primary" target="_blank" href="files/2023/DPI_Circular.pdf">DPI Circular (2023)</a>
+          <a class="button button-primary" target="_blank" href="files/2024/DPI_2024.pdf">DPI Circular</a>
           <a class="button button-primary" target="_blank" href="files/2024/KVS_Circular.pdf">KV Circular</a>
 
         </td>
