--- a/download.html
+++ b/download.html
@@ -102,7 +102,7 @@
           Individual Registration
         </td>
         <td>
-          <p><a href="https://quiz.aryabhat.org">quiz.aryabhat.org</a></p>
+          <p>Registration Closed <a href="https://quiz.aryabhat.org">quiz.aryabhat.org</a></p>
         </td>
       </tr>
       <tr>
