--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       <h3>Notices</h3>
 <br>
 <h4>Aryabhat Astronomy Quiz 2024-25 </h4>
-<p> <a href="https://quiz.aryabhat.org/">Individual Registration for Quiz </a></p>
+<p>Individual Registration for Quiz is now Closed</p>
 <p> <a href="https://aryabhat.org/download.html">Institutional Registration for Quiz </a>
     <br> [ FOR SCHOOLS ]
     <br>See: Letter for Forwarding Institution Details and Format for Institutional Entries
