removed reg link from home page

--- a/index.html
+++ b/index.html
@@ -49,11 +49,8 @@
       <h3>Notices</h3>
 <br>
 <h4>Aryabhat Astronomy Quiz 2024-25 </h4>
-<p>Individual Registration for Quiz is now Closed</p>
-<p> <a href="https://aryabhat.org/download.html">Institutional Registration for Quiz </a>
-    <br> [ FOR SCHOOLS ]
-    <br>See: Letter for Forwarding Institution Details and Format for Institutional Entries
-    <br> </p>
+<p> Registration for Quiz is now Closed</p>
+
 
 <!--h4>Aryabhat Astronomy Quiz 2023-24 </!h4>
 <p>Proposed dates for Observatory Trips</p>
