--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       <h3>Notices</h3>
 <br>
 <h4>Aryabhat Astronomy Quiz 2024-25 </h4>
-<p> Registration for Quiz is now Closed</p>
+<p> Preliminary Result Declared</p>
 
 
 <!--h4>Aryabhat Astronomy Quiz 2023-24 </!h4>
@@ -77,8 +77,9 @@
   </tr>
 
 </table-->
-<!--p> <a class="button button-primary" target="_" href="files/2023/Final_MeritList_202324.pdf">Final Merit List</a></p-->
-
+<p> <a class="button button-primary" target="_" href="files/2024/Merit_2024-25.pdf">Merit List</a></p>
+<p> <a class="button button-primary" target="_" href="files/2024/Summary_2024-25.pdf">Participation Summary</a></p>
+<p> Congratulations to all the winners! </p>
     </div>
 		<div class="eight columns" style="display: flex; flex-direction: column; align-items: center;">
 
