--- a/quiz.html
+++ b/quiz.html
@@ -81,7 +81,7 @@ We shall not be able to send them by any other means.</p>
       </p>
      
       <h3>The Prizes :</h3>
-      <p>The final winners of the quiz shall visit the observatory of their choice from those at Dongla, Kavalur, Kodaikanal, Nainital and Udaipur & Mount Abu in small groups. Observatories will be allotted to winners based on overall merit and their choice-options. The trips to Observatories shall proceed in next summers. </p>
+      <p>The final winners of the quiz shall visit the observatory of their choice from those at Gauribidanur, Kavalur, Kodaikanal, Nainital and Udaipur & Mount Abu in small groups. Observatories will be allotted to winners based on overall merit and their choice-options. The trips to Observatories shall proceed in next summers. </p>
  
       <h3>How to prepare :</h3>
       <p>The questions in the quiz are based on Astronomy, Space & related science. Participants must acquire a good knowledge of the Solar System, Deep Sky Objects & General Astronomy. Senior students of Aryabhat have compiled specific Study Material and Demo Quiz which will be available on our website. </p>
