updated to new background and logos

--- a/quiz.html
+++ b/quiz.html
@@ -21,16 +21,17 @@
 
   </script>
   <div class="container">
-	<section class="header">
+    <section class="header">
       <div class="row">
         <div class="six columns offset-by-two ">
-          <img class="value-img" width="300" height="100" src="images/newlogo.png">
+          <img class="value-img"  style="filter: drop-shadow(0px 0px 4px rgba(0, 0, 0, 1));" src="images/title.svg">
         </div>
         <div class="six columns logo">
-          <img class="value-img" width="204" height="100" src="images/aryabhat.png">
+          <img class="value-img" width="300" height="100" style="filter: drop-shadow(0px 0px 2px rgba(255, 255, 255, 1));" src="images/aryabhat.svg">
         </div>
       </div>
     </section>
+
 
     <nav class="navbar">
       <div class="container">
@@ -45,17 +46,6 @@
       </div>
     </nav>
 
-   <div class="main row">
-    <!--div class="six column"  style="display: flex; flex-direction: column; align-items: center;" >
-      <h4 class="renfrew" align="center"> Online Aryabhat Astronomy Quiz 2021-22 </h4>
-      <b>Note for Participants of Aryabhat Astronomy Quiz 2020-21 </b> 
-      <p >     
-Your Certificates of Participation have been mailed to your registered email ID. 
-We shall not be able to send them by any other means.</p>
-      <a href="result.html" class="button button-primary" style="width: 300px;">Results of Prelimnary Round</a>
-      <br><br><br>
-      </div-->
-   </div>
    <div class="main row">
 		<div class="six column" >
 
