--- a/download.html
+++ b/download.html
@@ -21,13 +21,13 @@
 
   </script>
   <div class="container">
-	<section class="header">
+    <section class="header">
       <div class="row">
         <div class="six columns offset-by-two ">
-          <img class="value-img" width="300" height="100" src="images/newlogo.png">
+          <img class="value-img"  style="filter: drop-shadow(0px 0px 4px rgba(0, 0, 0, 1));" src="images/title.svg">
         </div>
         <div class="six columns logo">
-          <img class="value-img" width="204" height="100" src="images/aryabhat.png">
+          <img class="value-img" width="300" height="100" style="filter: drop-shadow(0px 0px 2px rgba(255, 255, 255, 1));" src="images/aryabhat.svg">
         </div>
       </div>
     </section>
