--- a/index.html
+++ b/index.html
@@ -24,17 +24,16 @@
 
   </script>
   <div class="container">
-	<section class="header">
+    <section class="header">
       <div class="row">
         <div class="six columns offset-by-two ">
-          <img class="value-img" width="300" height="100" src="images/newlogo.png">
+          <img class="value-img"  style="filter: drop-shadow(0px 0px 4px rgba(0, 0, 0, 1));" src="images/title.svg">
         </div>
         <div class="six columns logo">
-          <img class="value-img" width="204" height="100" src="images/aryabhat.png">
+          <img class="value-img" width="300" height="100" style="filter: drop-shadow(0px 0px 2px rgba(255, 255, 255, 1));" src="images/aryabhat.svg">
         </div>
       </div>
     </section>
-
     <nav class="navbar">
       <div class="container">
         <ul class="navbar-list">
@@ -86,19 +85,19 @@
 		<div class="eight columns" style="display: flex; flex-direction: column; align-items: center;">
 
 		 <h4 align="center">About Aryabhat Foundation</h4>
-			<p>
+			<p class="justify">
 				Aryabhat foundation is a special endeavor for promotion of Basic Science. The movement started in 1995, which has now taken a shape of a duly registered social service organisation. Supported by a group of people dedicated to their duties towards the society, the organisation is committed to serving Basic Science in a tasty way to the youngsters. This will inculcate a science-based temperament in them.
 			</p>
-			<p>
+			<p class="justify">
 				The celestial bodies had always been objects of anxiety in the minds of the people through olden days. Fortunes & evils were widely associated with the appearance of these bodies in the sky; some of which were looked at with fear that their shadows cause disasters. The emergence of scientific information has enabled people to understand their origin & structure and thus come out of the feeling of trepidation about them. We study them under Astronomy, which is considered to be the mother of all science streams.
 			</p>
-			<p>
+			<p class="justify">
 				Astronomy is not only a constructive hobby for the children but also a pathway to bright future for youngsters aspiring for a challenging career in space technology. In a scenario where the traditional educational streams have reached saturation, it becomes almost mandatory for all to think of new fields wherein children can find good prospects for their career as well.
 			</p>
-			<p>
+			<p class="justify">
 				Under our special drive for popularising Astronomy, we conduct several programs, which broaden the outlook of people through scientific and authentic information about celestial objects. These programs have also been helpful in eradicating myths & superstitions from amongst the society. The objective of this endeavor has been well justified with excelling of our students at National and International levels. In yesteryears, students groomed at Aryabhat have added several feathers to the cap of the Nation. These include four Gold and one Silver Medals in the International Astronomy Olympiads, distinctions in RRGTM Project of NASA and other International forums.
 			</p>
-			<p>
+			<p class="justify">
 				We look for cooperation from the students, teachers, school authorities and parents for bringing our small effort to a great success.
 			</p>
 
