added social media icons

--- a/index.html
+++ b/index.html
@@ -101,10 +101,10 @@
 				We look for cooperation from the students, teachers, school authorities and parents for bringing our small effort to a great success.
 			</p>
 
-      <p><a href="https://instagram.com/aryabhatorg"> instagram</a> &nbsp;&nbsp;&nbsp;
-       <a href="https://youtube.com/aryabhatorg"> youtube</a> &nbsp;&nbsp;&nbsp;
-       <a href="https://www.facebook.com/aryabhatorg"> facebook</a> &nbsp;&nbsp;&nbsp;
-       <a href="https://x.com/aryabhatorg"> X / twitter</a>
+      <p><a href="https://instagram.com/aryabhatorg"><img width="32" src="images/insta.svg"/></a> &nbsp;&nbsp;&nbsp;
+       <a href="https://youtube.com/aryabhatorg"><img width="32" src="images/yt.svg"/></a> &nbsp;&nbsp;&nbsp;
+       <a href="https://www.facebook.com/aryabhatorg"><img width="32" src="images/fb.svg"/></a> &nbsp;&nbsp;&nbsp;
+       <a href="https://x.com/aryabhatorg"><img width="32" src="images/x.svg"/></a>
      </p>
 		 </div>
     </div>
