updated download page

--- a/download.html
+++ b/download.html
@@ -41,100 +41,56 @@
           <li class="navbar-item"><a class="navbar-link" href="photos.html">Photos</a></li>
           <li class="navbar-item"><a class="navbar-link" href="contact.html">Contact Us</a></li>
         </ul>
-
       </div>
     </nav>
 
    <div class="main row">
 		<div class="six column" >
-    <table class="u-center-block">
-      <tr>
-        <td>
-          Information
-        </td>
-        <td>
+        <h3>Information</h3>
+        <div>
           <!--a class="button button-primary" target="_blank" href="files/2021/AstroQuiz2021-22.pdf">Astronomy Quiz Details</a-->
-
           <a class="button button-primary" target="_blank" href="files/Offered Activities.pdf">Offered Activities</a>
            <a class="button button-primary" target="_blank" href="https://aryabhat.org/qintro">Quiz Introduction Video</a>
-
            <a class="button button-primary" target="_blank" href="files/2024/Circular_AstroQuiz_2024-25.pdf">Circular Astro Quiz 2024-25</a>
-        </td>
-      </tr>
-      <tr>
-        <td>
-          Study Material
-        </td>
-        <td>
-          <br>
+        </div>
+        <h3>Study Material</h3>
+        <div>
           <a class="button button-primary" target="_blank" href="https://docs.google.com/viewerng/viewer?url=http://aryabhat.org/files/Study_Material_1.pdf">Study Material 1</a>
-
           <a class="button button-primary" target="_blank" href="https://docs.google.com/viewerng/viewer?url=http://aryabhat.org/files/Study_Material_2.pdf">Study Material 2</a>
-
           <a class="button button-primary" target="_blank" href="https://docs.google.com/viewerng/viewer?url=http://aryabhat.org/files/Study_Material_3.pdf">Study Material 3</a>
-
           <a class="button button-primary" target="_blank" href="https://docs.google.com/viewerng/viewer?url=http://aryabhat.org/files/Glossary.pdf">Glossary</a>
             <br>Updated on 1 Jul 2024
-        </td>
-      </tr>
-      <tr>
-        <td>
-          Institutional Registration
-        </td>
-        <td>
-
-          <hr>
+        </div>
+        <h3>Institutional Registration</h3>
+        <div>
           ( Section for Schools Only)<!--, for individual registration go
           <a target="_blank" href="https://quiz.aryabhat.org">here</a> ) -->
           <br>          <br>
           <a class="button button-primary" target="_blank" href="files/2024/FlowChart.pdf">Flow Chart for Institutions</a>
-          <br>
-
           <a class="button button-primary" target="_blank" href="files/2024/Forwarding_Letter_to_Aryabhat.pdf">Letter for Forwarding Institution Details </a>
-          <br>
           <a class="button button-primary" target="_blank" href="files/2024/Institutional_Format.xls">Format for Institutional Entries </a>
           <br>
-          <hr>
-        </td>
-      </tr>
-       <tr>
-        <td>
-          Individual Registration
-        </td>
-        <td>
+        </div>
+        <h3>Individual Registration</h3>
+        <div>
           <p>Registration Closed <a href="https://quiz.aryabhat.org">quiz.aryabhat.org</a></p>
-        </td>
-      </tr>
-      <tr>
-        <td>
-          Circulars
-        </td>
-        <td>
+        </div>
+        <h3>Circulars</h3>
+        <div>
           <a class="button button-primary" target="_blank" href="files/2024/NVS_5354_15Mar2024.pdf">JNV Circular</a>
           <a class="button button-primary" target="_blank" href="files/2024/DPI_2024.pdf">DPI Circular</a>
           <a class="button button-primary" target="_blank" href="files/2024/KVS_Circular.pdf">KV Circular</a>
-
-        </td>
-      </tr>
-      <tr>
-        <td>
-          Others
-        </td>
-        <td>
+        </div>
+        <h3>Volunteer</h3>
+        <div>
           <a class="button button-primary" target="_blank" href="files/Become_a_volunteer.pdf">Become a Volunteer</a>
-
           <a class="button button-primary" target="_blank" href="files/Volunteer_application.pdf">Volunteer Application Form</a>
-        </td>
-      </tr>
-		</table>
-
+        </div>
 		 </div>
     </div>
     <div class="row" >
   		<p> &copy; Aryabhat Foundation &middot;</p>
 	   </div>
-  </div>
-
   </div>
 </body>
 </html>
