--- a/contact.html
+++ b/contact.html
@@ -67,11 +67,13 @@
         <p><a class="button button-primary" href="https://wa.me/9425674075">💬 Whatsapp 9425674075</a></p>
 
 		 </div>
-      <p><a href="https://instagram.com/aryabhatorg"> instagram</a> &nbsp;&nbsp;&nbsp;
-       <a href="https://youtube.com/aryabhatorg"> youtube</a> &nbsp;&nbsp;&nbsp;
-       <a href="https://www.facebook.com/aryabhatorg"> facebook</a> &nbsp;&nbsp;&nbsp;
-       <a href="https://x.com/aryabhatorg"> X / twitter</a> 
-     </p>
+
+     <p>
+      <a href="https://instagram.com/aryabhatorg"><img width="32" src="images/insta.svg"/></a> &nbsp;&nbsp;&nbsp;
+      <a href="https://youtube.com/aryabhatorg"><img width="32" src="images/yt.svg"/></a> &nbsp;&nbsp;&nbsp;
+      <a href="https://www.facebook.com/aryabhatorg"><img width="32" src="images/fb.svg"/></a> &nbsp;&nbsp;&nbsp;
+      <a href="https://x.com/aryabhatorg"><img width="32" src="images/x.svg"/></a>
+    </p>
     </div>
     <div class="row" >
   		<p> &copy; Aryabhat Foundation &middot;</p>
